--- a/App_Web/src/main/resources/messages_en.properties
+++ b/App_Web/src/main/resources/messages_en.properties
@@ -5,6 +5,7 @@ List_of_courses.text=List of all courses
 LMS.text=Learning Management System
 My_Courses.text=My courses
 My_Requests.text=My requests
+Personal_Page.text=Personal Page
 Requests.text=Requests
 ru.text=Russian 
 Sign_In.text=Sign In
