--- a/App_Web/src/main/resources/messages_ru.properties
+++ b/App_Web/src/main/resources/messages_ru.properties
@@ -5,6 +5,7 @@ List_of_courses.text=Список всех курсов
 LMS.text=Система управления обучением
 My_Courses.text=Мои курсы
 My_Requests.text=Мои заявки
+Personal_Page.text=Личная страница
 Requests.text=Заявки
 ru.text=Русский 
 Sign_In.text=Войти
