--- a/App_Web/src/main/resources/messages_ru.properties
+++ b/App_Web/src/main/resources/messages_ru.properties
@@ -10,4 +10,5 @@ Requests.text=Заявки
 ru.text=Русский 
 Sign_In.text=Войти
 Sign_Up.text=Регистрация
+Title_LMS_Main.text=СУО - Главная страница
 Welcome.text=Добро пожаловать в Систему управления обучением. Приятного путешествия!
