--- a/App_Web/src/main/resources/messages_en.properties
+++ b/App_Web/src/main/resources/messages_en.properties
@@ -10,4 +10,5 @@ Requests.text=Requests
 ru.text=Russian 
 Sign_In.text=Sign In
 Sign_Up.text=Sign Up
+Title_LMS_Main.text=LMS - Main Page
 Welcome.text=Welcome to the Learning Management System. Wish you a happy journey!
