LMS-50 Translation of pagination.html

--- a/App_Web/src/main/resources/messages.properties
+++ b/App_Web/src/main/resources/messages.properties
@@ -1,14 +1,19 @@
 Courses.text=Courses
 en.text=English 
+First.text=First
 Home.text=Home
+Last.text=Last
 List_of_courses.text=List of all courses
 LMS.text=Learning Management System
 My_Courses.text=My courses
 My_Requests.text=My requests
+Next.text=Next
 Personal_Page.text=Personal Page
+Prev.text=Prev
 Requests.text=Requests
 ru.text=Russian 
 Sign_In.text=Sign In
 Sign_Up.text=Sign Up
+Title_Courses.text=Courses - main page
 Title_LMS_Main.text=LMS - Main Page
 Welcome.text=Welcome to the Learning Management System. Wish you a happy journey!
