--- a/App_Web/src/main/resources/messages_ru.properties
+++ b/App_Web/src/main/resources/messages_ru.properties
@@ -1,14 +1,19 @@
 Courses.text=Курсы
 en.text=Английский 
+First.text=Первый
 Home.text=Домашняя стр.
+Last.text=Посл
 List_of_courses.text=Список всех курсов
 LMS.text=Система управления обучением
 My_Courses.text=Мои курсы
 My_Requests.text=Мои заявки
+Next.text=След
 Personal_Page.text=Личная страница
+Prev.text=Пред
 Requests.text=Заявки
 ru.text=Русский 
 Sign_In.text=Войти
 Sign_Up.text=Регистрация
+Title_Courses.text=Курсы - главная страница
 Title_LMS_Main.text=СУО - Главная страница
 Welcome.text=Добро пожаловать в Систему управления обучением. Приятного путешествия!
