LMS-50 Translation of courses.html

--- a/App_Web/src/main/resources/messages_ru.properties
+++ b/App_Web/src/main/resources/messages_ru.properties
@@ -1,4 +1,7 @@
 Courses.text=Курсы
+Delele.text=Удалить
+Description.text=Описание
+Edit.text=Изменить
 en.text=Английский 
 First.text=Первый
 Home.text=Домашняя стр.
@@ -10,10 +13,14 @@ My_Requests.text=Мои заявки
 Next.text=След
 Personal_Page.text=Личная страница
 Prev.text=Пред
+Price.text=Цена
 Requests.text=Заявки
 ru.text=Русский 
 Sign_In.text=Войти
 Sign_Up.text=Регистрация
+Start_Date.text=Дата начала
+Title.text=Наименование
 Title_Courses.text=Курсы - главная страница
 Title_LMS_Main.text=СУО - Главная страница
+View.text=Смотреть
 Welcome.text=Добро пожаловать в Систему управления обучением. Приятного путешествия!
