--- a/App_Web/src/main/resources/messages_en.properties
+++ b/App_Web/src/main/resources/messages_en.properties
@@ -1,4 +1,7 @@
 Courses.text=Courses
+Delele.text=Delete
+Description.text=Description
+Edit.text=Edit
 en.text=English 
 First.text=First
 Home.text=Home
@@ -10,10 +13,14 @@ My_Requests.text=My requests
 Next.text=Next
 Personal_Page.text=Personal Page
 Prev.text=Prev
+Price.text=Price
 Requests.text=Requests
 ru.text=Russian 
 Sign_In.text=Sign In
 Sign_Up.text=Sign Up
+Start_Date.text=Start Date
+Title.text=Title
 Title_Courses.text=Courses - main page
 Title_LMS_Main.text=LMS - Main Page
+View.text=View
 Welcome.text=Welcome to the Learning Management System. Wish you a happy journey!
