LMS-50 Refactored translation of navbar

--- a/App_Web/src/main/resources/messages_ru.properties
+++ b/App_Web/src/main/resources/messages_ru.properties
@@ -8,6 +8,7 @@ Home.text=Домашняя стр.
 Last.text=Посл
 List_of_courses.text=Список всех курсов
 LMS.text=Система управления обучением
+Log_Out.text=Выйти
 My_Courses.text=Мои курсы
 My_Requests.text=Мои заявки
 Next.text=След
