--- a/App_Web/src/main/resources/messages_en.properties
+++ b/App_Web/src/main/resources/messages_en.properties
@@ -8,6 +8,7 @@ Home.text=Home
 Last.text=Last
 List_of_courses.text=List of all courses
 LMS.text=Learning Management System
+Log_Out.text=Log Out
 My_Courses.text=My courses
 My_Requests.text=My requests
 Next.text=Next
