--- a/App_Web/src/main/resources/messages_en.properties
+++ b/App_Web/src/main/resources/messages_en.properties
@@ -1,27 +1,28 @@
-Courses.text=Courses
+Menu.Courses=Courses
 Delele.text=Delete
 Description.text=Description
 Edit.text=Edit
-en.text=English 
+Menu.SelectorEN=English 
 First.text=First
-Home.text=Home
+Menu.Home=Home
 Last.text=Last
 List_of_courses.text=List of all courses
 LMS.text=Learning Management System
-Log_Out.text=Log Out
-My_Courses.text=My courses
-My_Requests.text=My requests
+Menu.LogOut=Log Out
+Menu.MyCourses=My courses
+Menu.MyRequests=My requests
 Next.text=Next
-Personal_Page.text=Personal Page
+Menu.PersonalPage=Personal Page
 Prev.text=Prev
 Price.text=Price
-Requests.text=Requests
-ru.text=Russian 
-Sign_In.text=Sign In
-Sign_Up.text=Sign Up
+Menu.Requests=Requests
+Menu.SelectorRu=Russian 
+Menu.SignIn=Sign In
+Menu.SignUp=Sign Up
 Start_Date.text=Start Date
 Title.text=Title
 Title_Courses.text=Courses - main page
 Title_LMS_Main.text=LMS - Main Page
 View.text=View
 Welcome.text=Welcome to the Learning Management System. Wish you a happy journey!
+Menu.Users=Users
