--- a/App_Web/src/main/resources/messages_ru.properties
+++ b/App_Web/src/main/resources/messages_ru.properties
@@ -1,27 +1,28 @@
-Courses.text=Курсы
+Menu.Courses=Курсы
 Delele.text=Удалить
 Description.text=Описание
 Edit.text=Изменить
-en.text=Английский 
+Menu.SelectorEN=Английский 
 First.text=Первый
-Home.text=Домашняя стр.
+Menu.Home=Домашняя стр.
 Last.text=Посл
 List_of_courses.text=Список всех курсов
 LMS.text=Система управления обучением
-Log_Out.text=Выйти
-My_Courses.text=Мои курсы
-My_Requests.text=Мои заявки
+Menu.LogOut=Выйти
+Menu.MyCourses=Мои курсы
+Menu.MyRequests=Мои заявки
 Next.text=След
-Personal_Page.text=Личная страница
+Menu.PersonalPage=Личная страница
 Prev.text=Пред
 Price.text=Цена
-Requests.text=Заявки
-ru.text=Русский 
-Sign_In.text=Войти
-Sign_Up.text=Регистрация
+Menu.Requests=Заявки
+Menu.SelectorRu=Русский 
+Menu.SignIn=Войти
+Menu.SignUp=Регистрация
 Start_Date.text=Дата начала
 Title.text=Наименование
 Title_Courses.text=Курсы - главная страница
 Title_LMS_Main.text=СУО - Главная страница
 View.text=Смотреть
 Welcome.text=Добро пожаловать в Систему управления обучением. Приятного путешествия!
+Menu.Users=Пользователи
