--- a/App_Web/src/main/resources/messages_ru.properties
+++ b/App_Web/src/main/resources/messages_ru.properties
@@ -7,7 +7,7 @@ First.text=Первый
 Menu.Home=Домашняя стр.
 Last.text=Посл
 List_of_courses.text=Список всех курсов
-LMS.text=Система управления обучением
+Index.Lms=Система управления обучением
 Menu.LogOut=Выйти
 Menu.MyCourses=Мои курсы
 Menu.MyRequests=Мои заявки
@@ -22,7 +22,7 @@ Menu.SignUp=Регистрация
 Start_Date.text=Дата начала
 Title.text=Наименование
 Title_Courses.text=Курсы - главная страница
-Title_LMS_Main.text=СУО - Главная страница
+Index.TitleLms=СУО - Главная страница
 View.text=Смотреть
-Welcome.text=Добро пожаловать в Систему управления обучением. Приятного путешествия!
+Index.Welcome=Добро пожаловать в Систему управления обучением. Приятного путешествия!
 Menu.Users=Пользователи
