--- a/App_Web/src/main/resources/messages_en.properties
+++ b/App_Web/src/main/resources/messages_en.properties
@@ -7,7 +7,7 @@ First.text=First
 Menu.Home=Home
 Last.text=Last
 List_of_courses.text=List of all courses
-LMS.text=Learning Management System
+Index.Lms=Learning Management System
 Menu.LogOut=Log Out
 Menu.MyCourses=My courses
 Menu.MyRequests=My requests
@@ -22,7 +22,7 @@ Menu.SignUp=Sign Up
 Start_Date.text=Start Date
 Title.text=Title
 Title_Courses.text=Courses - main page
-Title_LMS_Main.text=LMS - Main Page
+Index.TitleLms=LMS - Main Page
 View.text=View
-Welcome.text=Welcome to the Learning Management System. Wish you a happy journey!
+Index.Welcome=Welcome to the Learning Management System. Wish you a happy journey!
 Menu.Users=Users
