LMS-50 Refactored translation for pagination.html

--- a/App_Web/src/main/resources/messages.properties
+++ b/App_Web/src/main/resources/messages.properties
@@ -3,17 +3,17 @@ Delele.text=Delete
 Description.text=Description
 Edit.text=Edit
 Menu.SelectorEN=English 
-First.text=First
+Pagination.First=First
 Menu.Home=Home
-Last.text=Last
+Pagination.Last=Last
 List_of_courses.text=List of all courses
 Index.Lms=Learning Management System
 Menu.LogOut=Log Out
 Menu.MyCourses=My courses
 Menu.MyRequests=My requests
-Next.text=Next
+Pagination.Next=Next
 Menu.PersonalPage=Personal Page
-Prev.text=Prev
+Pagination.Prev=Prev
 Price.text=Price
 Menu.Requests=Requests
 Menu.SelectorRu=Russian 
