--- a/App_Web/src/main/resources/messages_ru.properties
+++ b/App_Web/src/main/resources/messages_ru.properties
@@ -3,17 +3,17 @@ Delele.text=Удалить
 Description.text=Описание
 Edit.text=Изменить
 Menu.SelectorEN=Английский 
-First.text=Первый
+Pagination.First=Первая
 Menu.Home=Домашняя стр.
-Last.text=Посл
+Pagination.Last=Последняя
 List_of_courses.text=Список всех курсов
 Index.Lms=Система управления обучением
 Menu.LogOut=Выйти
 Menu.MyCourses=Мои курсы
 Menu.MyRequests=Мои заявки
-Next.text=След
+Pagination.Next=След
 Menu.PersonalPage=Личная страница
-Prev.text=Пред
+Pagination.Prev=Пред
 Price.text=Цена
 Menu.Requests=Заявки
 Menu.SelectorRu=Русский 
