LMS-50 Refactored translation for courses.html

--- a/App_Web/src/main/resources/messages_ru.properties
+++ b/App_Web/src/main/resources/messages_ru.properties
@@ -1,12 +1,12 @@
 Menu.Courses=Курсы
-Delele.text=Удалить
-Description.text=Описание
-Edit.text=Изменить
+Courses.Table.PopUp.Delele=Удалить
+Courses.Table.ColumnDescription=Описание
+Courses.Table.PopUp.Edit=Изменить
 Menu.SelectorEN=Английский 
 Pagination.First=Первая
 Menu.Home=Домашняя стр.
 Pagination.Last=Последняя
-List_of_courses.text=Список всех курсов
+Courses.ListOfCourses=Список всех курсов
 Index.Lms=Система управления обучением
 Menu.LogOut=Выйти
 Menu.MyCourses=Мои курсы
@@ -14,15 +14,16 @@ Menu.MyRequests=Мои заявки
 Pagination.Next=След
 Menu.PersonalPage=Личная страница
 Pagination.Prev=Пред
-Price.text=Цена
+Courses.Table.ColumnPrice=Цена
 Menu.Requests=Заявки
 Menu.SelectorRu=Русский 
 Menu.SignIn=Войти
 Menu.SignUp=Регистрация
-Start_Date.text=Дата начала
-Title.text=Наименование
-Title_Courses.text=Курсы - главная страница
+Courses.Table.ColumnStartDate=Дата начала
+Courses.Table.ColumnTitle=Наименование
+Courses.TitlePage=Курсы - главная страница
 Index.TitleLms=СУО - Главная страница
-View.text=Смотреть
+Courses.Table.PopUp.View=Смотреть
 Index.Welcome=Добро пожаловать в Систему управления обучением. Приятного путешествия!
 Menu.Users=Пользователи
+Courses.Title=Курсы
