--- a/App_Web/src/main/resources/messages.properties
+++ b/App_Web/src/main/resources/messages.properties
@@ -1,12 +1,12 @@
 Menu.Courses=Courses
-Delele.text=Delete
-Description.text=Description
-Edit.text=Edit
+Courses.Table.PopUp.Delele=Delete
+Courses.Table.ColumnDescription=Description
+Courses.Table.PopUp.Edit=Edit
 Menu.SelectorEN=English 
 Pagination.First=First
 Menu.Home=Home
 Pagination.Last=Last
-List_of_courses.text=List of all courses
+Courses.ListOfCourses=List of all courses
 Index.Lms=Learning Management System
 Menu.LogOut=Log Out
 Menu.MyCourses=My courses
@@ -14,15 +14,16 @@ Menu.MyRequests=My requests
 Pagination.Next=Next
 Menu.PersonalPage=Personal Page
 Pagination.Prev=Prev
-Price.text=Price
+Courses.Table.ColumnPrice=Price
 Menu.Requests=Requests
 Menu.SelectorRu=Russian 
 Menu.SignIn=Sign In
 Menu.SignUp=Sign Up
-Start_Date.text=Start Date
-Title.text=Title
-Title_Courses.text=Courses - main page
+Courses.Table.ColumnStartDate=Start Date
+Courses.Table.ColumnTitle=Title
+Courses.TitlePage=Courses - main page
 Index.TitleLms=LMS - Main Page
-View.text=View
+Courses.Table.PopUp.View=View
 Index.Welcome=Welcome to the Learning Management System. Wish you a happy journey!
 Menu.Users=Users
+Courses.Title=Courses
