--- a/App_Web/src/main/resources/messages_ru.properties
+++ b/App_Web/src/main/resources/messages_ru.properties
@@ -27,3 +27,4 @@ Courses.Table.PopUp.View=Смотреть
 Index.Welcome=Добро пожаловать в Систему управления обучением. Приятного путешествия!
 Menu.Users=Пользователи
 Courses.Title=Курсы
+Courses.LeftSideArea.Create=Создать
