--- a/App_Web/src/main/resources/messages_en.properties
+++ b/App_Web/src/main/resources/messages_en.properties
@@ -27,3 +27,4 @@ Courses.Table.PopUp.View=View
 Index.Welcome=Welcome to the Learning Management System. Wish you a happy journey!
 Menu.Users=Users
 Courses.Title=Courses
+Courses.LeftSideArea.Create=Create
