LMS-50 Refactored translation for exceptions in UserServiceImpl.java

--- a/App_Service/src/main/resources/textMessages_en.properties
+++ b/App_Service/src/main/resources/textMessages_en.properties
@@ -1,3 +1,4 @@
-UserServiceActivateLinkPattern=Please, visit link: %s/auth/activate/%s/%s
-UserServiceUserConfirmationSubject=User confirmation
-UserServiceRecoveryPassLinkPattern=Please, visit link: %s/auth/recoveryPass/%s/%s
+UserService.ActivateLinkPattern=Please, visit link: %s/auth/activate/%s/%s
+UserService.UserConfirmationSubject=User confirmation
+UserService.RecoveryPassLinkPattern=Please, visit link: %s/auth/recoveryPass/%s/%s
+UserService.EmailRecoveryPasswordSubject=Recovery password confirmation
