--- a/App_Service/src/main/resources/exceptionsMessages_en.properties
+++ b/App_Service/src/main/resources/exceptionsMessages_en.properties
@@ -1,4 +1,4 @@
-UserServiceExistingEmail=Email %s already exists in the database.
-UserServiceUserNotActivated=User not activated
-UserServiceUserNotFound=User not found
-UserServiceWrongOldPassword=Wrong old password
+UserService.ExistingEmail=Email %s already exists in the database.
+UserService.UserNotActivated=User not activated
+UserService.UserNotFound=User not found
+UserService.WrongOldPassword=Wrong old password
