--- a/App_Web/src/main/resources/messages.properties
+++ b/App_Web/src/main/resources/messages.properties
@@ -1,30 +1,30 @@
-Menu.Courses=Courses
-Courses.Table.PopUp.Delele=Delete
-Courses.Table.ColumnDescription=Description
-Courses.Table.PopUp.Edit=Edit
-Menu.SelectorEN=English 
-Pagination.First=First
-Menu.Home=Home
-Pagination.Last=Last
-Courses.ListOfCourses=List of all courses
-Index.Lms=Learning Management System
-Menu.LogOut=Log Out
-Menu.MyCourses=My courses
-Menu.MyRequests=My requests
-Pagination.Next=Next
-Menu.PersonalPage=Personal Page
-Pagination.Prev=Prev
-Courses.Table.ColumnPrice=Price
-Menu.Requests=Requests
-Menu.SelectorRu=Russian 
-Menu.SignIn=Sign In
-Menu.SignUp=Sign Up
-Courses.Table.ColumnStartDate=Start Date
-Courses.Table.ColumnTitle=Title
-Courses.TitlePage=Courses - main page
-Index.TitleLms=LMS - Main Page
-Courses.Table.PopUp.View=View
-Index.Welcome=Welcome to the Learning Management System. Wish you a happy journey!
-Menu.Users=Users
-Courses.Title=Courses
-Courses.LeftSideArea.Create=Create
+Menu.Courses=\u041A\u0443\u0440\u0441\u044B
+Courses.Table.PopUp.Delele=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
+Courses.Table.ColumnDescription=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+Courses.Table.PopUp.Edit=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C
+Menu.SelectorEN=\u0410\u043D\u0433\u043B\u0438\u0439\u0441\u043A\u0438\u0439
+Pagination.First=\u041F\u0435\u0440\u0432\u0430\u044F
+Menu.Home=\u0414\u043E\u043C\u0430\u0448\u043D\u044F\u044F \u0441\u0442\u0440.
+Pagination.Last=\u041F\u043E\u0441\u043B\u0435\u0434\u043D\u044F\u044F
+Courses.ListOfCourses=\u0421\u043F\u0438\u0441\u043E\u043A \u0432\u0441\u0435\u0445 \u043A\u0443\u0440\u0441\u043E\u0432
+Index.Lms=\u0421\u0438\u0441\u0442\u0435\u043C\u0430 \u0443\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u044F \u043E\u0431\u0443\u0447\u0435\u043D\u0438\u0435\u043C
+Menu.LogOut=\u0412\u044B\u0439\u0442\u0438
+Menu.MyCourses=\u041C\u043E\u0438 \u043A\u0443\u0440\u0441\u044B
+Menu.MyRequests=\u041C\u043E\u0438 \u0437\u0430\u044F\u0432\u043A\u0438
+Pagination.Next=\u0421\u043B\u0435\u0434
+Menu.PersonalPage=\u041B\u0438\u0447\u043D\u0430\u044F \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430
+Pagination.Prev=\u041F\u0440\u0435\u0434
+Courses.Table.ColumnPrice=\u0426\u0435\u043D\u0430
+Menu.Requests=\u0417\u0430\u044F\u0432\u043A\u0438
+Menu.SelectorRu=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
+Menu.SignIn=\u0412\u043E\u0439\u0442\u0438
+Menu.SignUp=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+Courses.Table.ColumnStartDate=\u0414\u0430\u0442\u0430 \u043D\u0430\u0447\u0430\u043B\u0430
+Courses.Table.ColumnTitle=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Courses.TitlePage=\u041A\u0443\u0440\u0441\u044B - \u0433\u043B\u0430\u0432\u043D\u0430\u044F \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430
+Index.TitleLms=\u0421\u0423\u041E - \u0413\u043B\u0430\u0432\u043D\u0430\u044F \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430
+Courses.Table.PopUp.View=\u0421\u043C\u043E\u0442\u0440\u0435\u0442\u044C
+Index.Welcome=\u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C \u0432 \u0421\u0438\u0441\u0442\u0435\u043C\u0443 \u0443\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u044F \u043E\u0431\u0443\u0447\u0435\u043D\u0438\u0435\u043C. \u041F\u0440\u0438\u044F\u0442\u043D\u043E\u0433\u043E \u043F\u0443\u0442\u0435\u0448\u0435\u0441\u0442\u0432\u0438\u044F!
+Menu.Users=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
+Courses.Title=\u041A\u0443\u0440\u0441\u044B
+Courses.LeftSideArea.Create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C
