LMS-50 Localized login.html

--- a/App_Web/src/main/resources/messages_en.properties
+++ b/App_Web/src/main/resources/messages_en.properties
@@ -18,7 +18,7 @@ Courses.Table.ColumnPrice=Price
 Menu.Requests=Requests
 Menu.SelectorRu=Russian 
 Menu.SignIn=Sign In
-Menu.SignUp=Sign Up
+Menu.SignUp=Create an account
 Courses.Table.ColumnStartDate=Start Date
 Courses.Table.ColumnTitle=Title
 Courses.TitlePage=Courses - main page
@@ -28,3 +28,10 @@ Index.Welcome=Welcome to the Learning Management System. Wish you a happy journe
 Menu.Users=Users
 Courses.Title=Courses
 Courses.LeftSideArea.Create=Create
+Login.Title=Log In Page
+Login.LeftSideArea.SingIn=Sign In
+Login.LeftSideArea.CredentialsMessage=Enter your account credentials to log in to the system
+Login.MainArea.EmailPlaceHolder=Email
+Login.MainArea.PasswordPlaceHolder=Password
+Login.MainArea.LogInButton=Log In
+Login.MainArea.FogotPasswButton=Fogot your password?
