--- a/App_Web/src/main/resources/messages.properties
+++ b/App_Web/src/main/resources/messages.properties
@@ -18,7 +18,7 @@ Courses.Table.ColumnPrice=\u0426\u0435\u043D\u0430
 Menu.Requests=\u0417\u0430\u044F\u0432\u043A\u0438
 Menu.SelectorRu=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
 Menu.SignIn=\u0412\u043E\u0439\u0442\u0438
-Menu.SignUp=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+Menu.SignUp=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0430\u043A\u043A\u0430\u0443\u043D\u0442
 Courses.Table.ColumnStartDate=\u0414\u0430\u0442\u0430 \u043D\u0430\u0447\u0430\u043B\u0430
 Courses.Table.ColumnTitle=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 Courses.TitlePage=\u041A\u0443\u0440\u0441\u044B - \u0433\u043B\u0430\u0432\u043D\u0430\u044F \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430
@@ -28,3 +28,10 @@ Index.Welcome=\u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043
 Menu.Users=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
 Courses.Title=\u041A\u0443\u0440\u0441\u044B
 Courses.LeftSideArea.Create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C
+Login.Title=\u0421\u0442\u0440\u0430\u043D\u0438\u0446\u0430 \u0430\u0432\u0442\u043E\u0440\u0438\u0437\u0430\u0446\u0438\u0438
+Login.LeftSideArea.SingIn=\u0412\u0445\u043E\u0434
+Login.LeftSideArea.CredentialsMessage=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0441\u0432\u043E\u0438 \u0443\u0447\u0435\u0442\u043D\u044B\u0435 \u0434\u0430\u043D\u043D\u044B\u0435
+Login.MainArea.EmailPlaceHolder=Email
+Login.MainArea.PasswordPlaceHolder=\u041F\u0430\u0440\u043E\u043B\u044C
+Login.MainArea.LogInButton=\u0412\u0445\u043E\u0434
+Login.MainArea.FogotPasswButton=Забыли пароль?
