LMS-50 Refactored localization of login.html

--- a/App_Web/src/main/resources/messages.properties
+++ b/App_Web/src/main/resources/messages.properties
@@ -29,8 +29,8 @@ Menu.Users=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0
 Courses.Title=\u041A\u0443\u0440\u0441\u044B
 Courses.LeftSideArea.Create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C
 Login.Title=\u0421\u0442\u0440\u0430\u043D\u0438\u0446\u0430 \u0430\u0432\u0442\u043E\u0440\u0438\u0437\u0430\u0446\u0438\u0438
-Login.LeftSideArea.SingIn=\u0412\u0445\u043E\u0434
-Login.LeftSideArea.CredentialsMessage=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0441\u0432\u043E\u0438 \u0443\u0447\u0435\u0442\u043D\u044B\u0435 \u0434\u0430\u043D\u043D\u044B\u0435
+Login.LeftSideArea.SingIn=\u0410\u0432\u0442\u043E\u0440\u0438\u0437\u0430\u0446\u0438\u044F
+Login.LeftSideArea.CredentialsMessage=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0432\u0430\u0448\u0438 \u0434\u0430\u043D\u043D\u044B\u0435 \u0434\u043B\u044F \u0432\u0445\u043E\u0434\u0430 \u0432 \u0441\u0438\u0441\u0442\u0435\u043C\u0443
 Login.MainArea.EmailPlaceHolder=Email
 Login.MainArea.PasswordPlaceHolder=\u041F\u0430\u0440\u043E\u043B\u044C
 Login.MainArea.LogInButton=\u0412\u0445\u043E\u0434
