LMS-58: Add localisation for Error Exception

--- a/App_Web/src/main/resources/messages.properties
+++ b/App_Web/src/main/resources/messages.properties
@@ -35,3 +35,4 @@ Login.MainArea.EmailPlaceHolder=Email
 Login.MainArea.PasswordPlaceHolder=\u041F\u0430\u0440\u043E\u043B\u044C
 Login.MainArea.LogInButton=\u0412\u0445\u043E\u0434
 Login.MainArea.FogotPasswButton=Забыли пароль?
+LmsErrorController.error=\u041E\u0439\u002E\u002E\u002E\u0020\u041E\u0448\u0438\u0431\u043A\u0430\u002E\u002E\u002E\u0020\u041C\u044B\u0020\u0443\u0436\u0435\u0020\u043F\u0440\u0430\u0432\u0438\u043C\u0020\u044D\u0442\u043E\u0021
