--- a/App_Web/src/main/resources/messages_en.properties
+++ b/App_Web/src/main/resources/messages_en.properties
@@ -35,3 +35,4 @@ Login.MainArea.EmailPlaceHolder=Email
 Login.MainArea.PasswordPlaceHolder=Password
 Login.MainArea.LogInButton=Log In
 Login.MainArea.FogotPasswButton=Fogot your password?
+LmsErrorController.error=Ooops... Error... We are already correcting this!
